# Dungeon_master_assistant

./: .env.example  .gitattributes  .gitignore  README.md  app.py  pyproject.toml
data/instructions/: Session_Tempalte.md
data/lore/alaxya/: ALAXYA  GEOGRAPHIC BREAKDOWN.md  HISTORY OF ALAXYA.md  THE SEVEN ESPADA - COMPLETE HIERARCHY.md
data/lore/player groups/: Noir_ Players.md  The Crushing Squirrels_ Players.md  The Unseen Assembly_ Players.md  The Wolf Pack_ Players.md
prompts/: instructions.md  instructor.md  orchestrator.md  writer.md
src/dmhelper/: __init__.py  config.py  errors.py  observability.py  orchestrator.py  outputs.py  preflight.py
src/dmhelper/agents/: format_standards.py  instructor.py  writer.py
src/dmhelper/clients/: criticalrole.py  kanka.py
src/dmhelper/maintenance/: clean_lore.py
src/dmhelper/store/: db.py
src/dmhelper/tools/: kanka_search.py  kanka_write.py  lore.py  memory.py  narration.py  web.py
tests/: test_chats.py  test_clean_lore.py  test_criticalrole.py  test_errors.py  test_format_standards.py  test_instructor_parse.py  test_kanka.py  test_kanka_search.py  test_lore.py  test_memory_tool.py  test_narration.py  test_outputs.py  test_preflight.py  test_run_turn_errors.py  test_write_gate.py
