[project]
name = "dmhelper"
version = "0.1.0"
description = "Single-user D&D Dungeon Master assistant. OpenAI Agents SDK framework, Anthropic Claude only via LiteLLM, Kanka REST for canon, Gradio chat UI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents[litellm]>=0.0.17",
    "anthropic>=0.40.0",
    "gradio>=4.44.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-frontmatter>=1.1.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dmhelper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
